# data-juicer-sphinx

./: 404.html  pyproject.toml
.github/workflows/: deploy_sphinx_docs.yml
docs/sphinx_doc/: build_versions.py  redirect.html
docs/sphinx_doc/source/: conf.py  custom_myst.py
docs/sphinx_doc/source/_static/: ask-ai-widget.css  ask-ai-widget.js  star-widget.css  star-widget.js
docs/sphinx_doc/source/_templates/: star-navbar-btn.html  version-language-switcher.html
en/main/: .buildinfo  README.html  api.html  docs_index.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
en/main/.doctrees/: docs_index.doctree  environment.pickle  index.doctree
en/main/.doctrees/docs/: test.doctree
en/main/.doctrees/source/: api.doctree
en/main/_sources/docs/: BUILD.md.txt
en/main/_static/: ask-ai-widget.css  ask-ai-widget.js
en/main/docs/: BUILD.html  test.html
en/main/docs_index/: index.html
en/main/docs_index/docs/: test.html
en/main/docs_index/guides/: setup.html
en/main/guides/: setup.html
en/main/source/: api.html  docs_index.html  index.html
en/main/source/docs_index/: index.html
guides/: setup.md
zh_CN/main/: .buildinfo  README_ZH.html  api.html  docs_index_ZH.html  genindex.html  index_ZH.html  objects.inv  search.html  searchindex.js
zh_CN/main/.doctrees/: docs_index_ZH.doctree  environment.pickle  index_ZH.doctree
zh_CN/main/docs/: BUILD_ZH.html  test_ZH.html
zh_CN/main/docs_index/: index_ZH.html
zh_CN/main/guides/: setup_ZH.html
zh_CN/main/source/: api.html  docs_index_ZH.html  index_ZH.html
(+9 files in other folders)
