[project]
name = "data-juicer-sphinx"
version = "0.1.0"
description = "This is a unified documentation build template designed for the Data-Juicer ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.1",
    "pydata-sphinx-theme==0.16.1",
    "sphinx",
    "sphinx-copybutton>=0.5.2",
    "translators>=6.0.1",
    "numpy<=2.2.0",
]


[tool.setuptools.packages.find]
include = ["docs/sphinx_doc"]
